wersja finalna(?) do obsługi ręcznej
niestety kompilacja do .exe nie jest możliwa, bo plik .config jest zaciągany w czasie kompilacji, a nie podczas wykonywania

--- a/Eksporter.config
+++ b/Eksporter.config
@@ -12,5 +12,5 @@ sors := ("C:\Users\REDDO_PW\Documents\AutoHotKey\Do prób\CopyFrom")
 tmxcheck = False
 csvcheck = True
 
-;mo¿e mieæ wartoœæ Boole'a albo liczbow¹; wówczas jest to liczba sekund wyœwietlania okien informacyjnych
-debug = False
+;mo¿e mieæ wartoœæ Boole'a albo liczbow¹; wówczas jest to liczba sekund wyœwietlania okien informacyjnych. Œrednik na pocz¹tku oznacza, ¿e linia nie bêdzie brana pod uwagê
+;debug = False
